# elerium-firmware

./: .gitignore  CMakeLists.txt  Kconfig  west.yml
app/: CMakeLists.txt  prj.conf
app/src/: main.c
boards/beechat/elerium/: Kconfig.elerium  board.cmake  board.yml  elerium.dts  elerium.yaml  elerium_defconfig
boards/beechat/elerium_l4/: Kconfig.elerium_l4  board.yml  elerium_l4.dts  elerium_l4.yaml
boards/beechat/elerium_l4/support/: openocd.cfg
boards/beechat/elerium_u5/: Kconfig.elerium_u5  board.cmake  board.yml  elerium_u5.dts  elerium_u5.yaml  elerium_u5_defconfig
boards/beechat/elerium_u5/support/: openocd.conf
drivers/: CMakeLists.txt  Kconfig
drivers/ntag5/: CMakeLists.txt  Kconfig.ntag5  ntag5.c  ntag5.h
dts/bindings/: nxp,ntag5.yaml
include/elerium/subsys/: crypto.h  nfc.h  storage.h  url_sign.h  wallet.h
lib/: CMakeLists.txt  Kconfig
lib/subsys/: CMakeLists.txt  crypto_tinycrypt.c  logging.c  nfc.c  storage.c  url_sign.c  wallet.c
zephyr/: module.yml
